2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 447547 -
	Error occurred when highlighting multiline strings(@"")'.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed off by 1 error.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Worked on markup
	syntax mode.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Added support for
	underlining highlighting styles.

2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Highlighting/ChunkStyle.cs: Remove Console.WriteLine.

2008-11-20  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.mdp:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/Chunk.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/ChunkStyle.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Worked on markup
	syntax mode.

2008-11-19  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: Add missing '!'. Fixes pasting.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs: Used CanEdit instead of readonly

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs: Recognizing readonly property for
	cut&paste operations.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextMarker.cs: Add properties to UnderlineMarker to
	limit it to part of a line.
